# context_builder

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  OUTPUT.md  PLAN.md  README.md  SECURITY.md  TODOS.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: launch.json
agent_docs/: AGENTS_old.md  AGENT_MANIFEST.md  RESEARCH.md
backend/: Dockerfile  cli.py  main.py  pytest.ini  requirements.txt
backend/agent/: ablation_flags.py  agent_config.py  context_manager.py  eval_suite.py  explore_subagent.py  explore_tools.py  feature_flags.py  forked_subagent.py  git_auth.py  graph_utils.py  intake_helpers.py  learn_from_fix.py  lint_rules.py  linters.py  llm.py  patch_utils.py  path_safety.py  pipeline.py  react_guardrails.py  react_loop.py  react_pipeline.py  react_prompt.py  react_tools.py  repo_detection.py  sample_eval_bugs.json  sandbox.py  scout.py  shell_safety.py  shell_tools.py  tool_metadata.py  trace.py  types.py  web_tools.py
backend/analyzer/: call_graph.py  changes.py  code_parser.py  data_access.py  flows.py  git_analyzer.py  multi_lang_parser.py  structure.py
backend/api/: agent.py  auth.py  chat.py  context.py  eval.py  flags.py  graph.py  knowledge.py  metrics.py  repos.py  search.py  tools.py  utils.py
backend/compiler/: context_doc.py
backend/embeddings/: embedder.py
backend/enricher/: business_logic.py  decision_points.py  domain_concepts.py  summarizer.py  test_enricher.py
backend/eval/: bugs.json
backend/graph/: builder.py  community.py  neo4j_client.py  queries.py
backend/rag/: context_assembler.py  query_analyzer.py  retriever.py
backend/tests/: conftest.py  test_ablation.py  test_api_agent.py  test_api_auth.py  test_api_repos.py  test_binary_safety.py  test_brt_and_verifier.py  test_business_logic.py  test_business_persist.py  test_business_rule_normalization.py  test_changes.py  test_cli_failure_records.py  test_community_detection.py  (+48 more)
data/: agent_metrics.json
docs/: PROJECT.md  v4-complete-agent-reference.md  v4-tools-and-prompt.md
eval/: .gitignore  bugs.json  run_experiment.py  swe_bench_20.json  swebench_5.json  swebench_50.json  swebench_50_vague.json  swebench_5b.json  swebench_5b_resume.json  swebench_lite.json  swebench_resume.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
tests/: test_context_assembler_budget.py  test_context_assembler_params_none.py  test_generate_function_summaries.py  test_list_questions_json_error.py  test_rrf_merge_and_rank.py
(+70 files in other folders)
